Fix #1458. Search Bar aligned on top

--- a/web/client/components/data/query/queryform.css
+++ b/web/client/components/data/query/queryform.css
@@ -91,6 +91,11 @@
 #mapstore-drawermenu #queryFormPanel .details-panel.panel-primary {
     border-color: #078aa3;
 }
+#mapstore-drawermenu #queryFormPanel .query-toolbar{
+    position: absolute;
+    right: 0;
+    top: 42px;
+}
 
 /*****************************/
 /* DRAWER MENU END ***********/
